--- a/dates.html
+++ b/dates.html
@@ -18,7 +18,7 @@
     <h1 class="display-1" style='font-size: 150px'>Dates</h1>
   </div>
   <!-- Nav bar -->
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000; color: #FFFFFF;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navigation</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -72,7 +72,7 @@
   <!-- dates -->
   <!-- Date Party -->
   <div class="date">
-    <h2 text-align="center">First Date Party</h2>
+    <h2 text-align="center" class="display-2">First Date Party</h2>
     <hr>
     <div class="date-body">
       <!-- Carousel -->
@@ -96,7 +96,7 @@
   </div>
   <!-- Indian -->
   <div class="date">
-    <h2 text-align="center">Indian Date</h2>
+    <h2 text-align="center" class="display-2">Indian Date</h2>
     <hr>
     <div class="date-body">
       <!-- Text -->
@@ -121,7 +121,7 @@
   </div>
   <!-- Formal -->
   <div class="date">
-    <h2 text-align="center">Formal</h2>
+    <h2 text-align="center" class="display-2">Formal</h2>
     <hr>
     <div class="date-body">
       <!-- Carousel -->
@@ -157,7 +157,7 @@
   </div>
   <!-- Wedding -->
   <div class="date">
-    <h2 text-align="center">Wedding</h2>
+    <h2 text-align="center" class="display-2">Wedding</h2>
     <hr>
     <div class="date-body">
       <!-- Carousel -->
@@ -196,7 +196,7 @@
   </div>
   <!-- PV -->
   <div class="date">
-    <h2 text-align="center">Day and a half in PV</h2>
+    <h2 text-align="center" class="display-2">Day and a half in PV</h2>
     <hr>
     <div class="date-body">
       <!-- Text -->
@@ -235,7 +235,7 @@
   </div>
   <!-- Formal 2 -->
   <div class="date">
-    <h2 text-align="center">Formal 2</h2>
+    <h2 text-align="center" class="display-2">Formal 2</h2>
     <hr>
     <div class="date-body">
       <!-- Carousel -->
@@ -275,7 +275,7 @@
   </div>
   <!-- Charcuterie -->
   <div class="date">
-    <h2 text-align="center">Charcuterie</h2>
+    <h2 text-align="center" class="display-2">Charcuterie</h2>
     <hr>
     <div class="date-body">
       <!-- Text -->
@@ -303,7 +303,7 @@
   </div>
   <!-- Solona Pho -->
   <div class="date">
-    <h2 text-align="center">Solona Pho</h2>
+    <h2 text-align="center" class="display-2">Solona Pho</h2>
     <hr>
     <div class="date-body">
       <!-- Text -->
@@ -333,7 +333,7 @@
   </div>
   <!-- Fair -->
   <div class="date">
-    <h2 text-align="center">Fair</h2>
+    <h2 text-align="center" class="display-2">Fair</h2>
     <hr>
     <div class="date-body">
       <!-- Carousel -->
@@ -371,7 +371,7 @@
   </div>
   <!-- San Francisco Ramen and Palace -->
   <div class="date">
-    <h2 text-align="center">San Francisco Ramen and Palace</h2>
+    <h2 text-align="center" class="display-2">San Francisco Ramen and Palace</h2>
     <hr>
     <div class="date-body">
       <!-- Text -->
@@ -408,7 +408,7 @@
   </div>
   <!-- GIRLFRIEND! -->
   <div class="date">
-    <h2 text-align="center">GIRLFRIEND!!!!!!!!!!</h2>
+    <h2 text-align="center" class="display-2">GIRLFRIEND!!!!!!!!!!</h2>
     <hr>
     <div class="date-body">
       <!-- Text -->
@@ -442,7 +442,7 @@
   </div>
   <!-- Postino's -->
   <div class="date">
-    <h2 text-align="center">Postino's</h2>
+    <h2 text-align="center" class="display-2">Postino's</h2>
     <hr>
     <div class="date-body">
       <!-- Carousel -->
@@ -473,7 +473,7 @@
   </div>
   <!-- Isabel's Birthday -->
   <div class="date">
-    <h2 text-align="center">Isabel's Birthday</h2>
+    <h2 text-align="center" class="display-2">Isabel's Birthday</h2>
     <hr>
     <div class="date-body">
       <!-- Text -->
@@ -516,7 +516,7 @@
   </div>
   <!-- Christopher Bday -->
   <div class="date">
-    <h2 text-align="center">Christopher's Birthday</h2>
+    <h2 text-align="center" class="display-2">Christopher's Birthday</h2>
     <hr>
     <div class="date-body">
       <!-- Carousel -->
@@ -559,7 +559,7 @@
   </div>
   <!-- Pumpkin Patch-->
   <div class="date">
-    <h2 text-align="center">Pumpkin Patch</h2>
+    <h2 text-align="center" class="display-2">Pumpkin Patch</h2>
     <hr>
     <div class="date-body">
       <!-- Carousel -->
@@ -590,7 +590,7 @@
   </div>
   <!-- Oregon Thai -->
   <div class="date">
-    <h2 text-align="center">Oregon Thai</h2>
+    <h2 text-align="center" class="display-2">Oregon Thai</h2>
     <hr>
     <div class="date-body">
       <!-- Text -->
@@ -618,7 +618,7 @@
   </div>
   <!-- Sawdust-->
   <div class="date">
-    <h2 text-align="center">Sawdust</h2>
+    <h2 text-align="center" class="display-2">Sawdust</h2>
     <hr>
     <div class="date-body">
       <!-- Carousel -->
@@ -655,7 +655,7 @@
   </div>
   <!-- Christmas Card Lane -->
   <div class="date">
-    <h2 text-align="center">Christmas Card Lane</h2>
+    <h2 text-align="center" class="display-2">Christmas Card Lane</h2>
     <hr>
     <div class="date-body">
       <!-- Text -->
@@ -683,7 +683,7 @@
   </div>
   <!-- Hotel Del -->
   <div class="date">
-    <h2 text-align="center">Hotel Del</h2>
+    <h2 text-align="center" class="display-2">Hotel Del</h2>
     <hr>
     <div class="date-body">
       <!-- Carousel -->
@@ -717,7 +717,7 @@
   </div>
   <!-- The Grove -->
   <div class="date">
-    <h2 text-align="center">Grove Christmas</h2>
+    <h2 text-align="center" class="display-2">Grove Christmas</h2>
     <hr>
     <div class="date-body">
       <!-- Text -->
