--- a/letters.html
+++ b/letters.html
@@ -15,7 +15,7 @@
             <h1 class ="display-1" style= 'font-size: 150px'>Letters</h1>
         </div>
         <!-- Nav bar -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000; color: #FFFFFF;">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Navigation</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
